--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "liveServer.settings.port": 5501
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#2C2D37",
+        "titleBar.activeBackground": "#3E3F4C",
+        "titleBar.activeForeground": "#FAFAFB"
+    }
 }
