--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.1",
   "main": "app.js",
   "scripts": {
+    "start": "node ./app.js",
+    "dev":"nodeom ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Esteban Rey",
